# pop-art-deepmind

./: .gitignore  Dockerfile  Makefile  README.md  main.py  plot_results.py  pyproject.toml  utils.py
learners/: losses.py  model.py  normalized_sgd.py  pop_art_sgd.py  trainer.py  vanilla_sgd.py
utils/: dataset_generator.py
