[tool.poetry]
name = "pop-art"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
numpy = "^1.24.2"
matplotlib = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\/.*\.pyi?$'
